fix draggable overflow for relative body position

--- a/mods/chess/web/css/chess-base.css
+++ b/mods/chess/web/css/chess-base.css
@@ -1,6 +1,3 @@
-html, body {
-    height: 99.999%;
-}
 
 .log-lock .mobile-log-tab {
     background-color: #222d;
