--- a/web/saito/css-imports/saito-base.css
+++ b/web/saito/css-imports/saito-base.css
@@ -25,9 +25,9 @@ body {
   margin: 0;
   font-size: 1.6rem;
   font-weight: 400;
+  position: fixed; /* why relative? */
   height: 100vh;
-  position: relative;
-  max-width: 100vw;
+  width: 100vw;
   overflow: hidden;
   background-color: var(--saito-background-color);
 }
